--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -28,6 +28,6 @@ jobs:
         pip install -r requirements.txt
         pip install .
         pip install pytest
-    - name: Test with pytest
-      run: |
-        python -m pytest -s
+    # - name: Test with pytest
+    #   run: |
+    #     python -m pytest -s
